--- a/checkpoint-two.ipynb
+++ b/checkpoint-two.ipynb
@@ -920,15 +920,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Intelligence and Alignment\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "azdata_cell_guid": "d4931c0c-2c09-4ee1-95d4-73dd08c2f0a6"
@@ -941,9 +932,17 @@
     "1. Was there anything surprising about your dataset? \n",
     "\n",
     "- I was surprised when looking at the health/armor of either the 10 most dangerous monsters or 10 most common monsters. There were quite a few similarities (such as Dragons were number 2 on both lists)\n",
+    "- top 3 alignments are: unaligned, chaotic evil, and lawful evil\n",
+    "- Only bout 40% of the monsters are Medium Size\n",
+    "- The correlation between Challenge Rating and Strength seems to have some kind of exponential growth\n",
     "\n",
     "2. Do you have any concerns about your dataset? \n",
-    "3. Is there anything you want to make note of for the next phase of your analysis, which is cleaning data? "
+    "\n",
+    "- There are a lot of columns to work with and I might not be able to explore everything I want\n",
+    "\n",
+    "3. Is there anything you want to make note of for the next phase of your analysis, which is cleaning data?\n",
+    "\n",
+    "- This data set is pretty clean already, but maybe parring down some of the variables will be helpful for analysis"
    ]
   },
   {
